Changes to css styling

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Header</div>
-    <div>This website</div>
+    <header>
+        <div class="navigation-bar">
+            <div class="logo">Header logo</div>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </header>
+    <div class="mainbanner">
+        <div class="herotext">This website</div>
+        <div class="heroimage">Hello</div>
+    </div>
     <div>Random info</div>
     <div>Quote</div>
     <div>Call to action</div>
